2004-04-11  Thiemo Seufer  <seufer@csv.ica.uni-stuttgart.de>

	* Makefile.am: Remove mips from aout targets.
	* Makefile.in: Regenerate.
	* configure.in: Remove mips-dec-bsd* target.
	* configure: Regenerate.

2004-04-07  Alan Modra  <amodra@bigpond.net.au>

	PR 96
	* config/tc-ppc.c (ppc_elf_suffix): Add valid32 and valid64 fields
	to struct map_bfd.  Adjust MAP macro, and define MAP32, MAP64.
	Update "mapping".  Restrict some @ modifiers to 32 bit.

2004-04-01  Asgari Jinia  <asgarij@kpitcummins.com>
	    Dhananjay Deshpande <dhananjayd@kpitcummins.com>

	* config/tc-sh.c (dont_adjust_reloc_32): New variable.
	(sh_fix_adjustable): Avoid adjusting BFD_RELOC_32 when
	dont_adjust_reloc_32 is set.
	(md_longopts): Add option -renesas.
	(md_parse_option, md_show_usage): Likewise.
	* doc/c-sh.texi: Likewise.

2004-04-01  Dave Korn  <dk@artimi.com>

	* config/tc-dlx.c (md_assemble): set fx_no_overflow flag for
	hi16 and lo16 fixS structs.
	(md_assemble): generate bit_fixS for RELOC_DLX_LO16 in
	exactly the same way as for RELOC_DLX_REL16.
	(machine_ip): properly respect LO flag in the_insn and
	output RELOC_DLX_LO16 rather than RELOC_DLX_16.
	(md_apply_fix3): apply RELOC_DLX_LO16.

2004-03-30  Stan Shebs  <shebs@apple.com>

	Remove long-obsolete MPW support.
	* mpw-config.in, mpw-make.sed, mac-as.r: Remove files.
	* configure.in: Remove mention of ppc-*-mpw* config.
	* configure.in: Likewise.

2004-03-30  Nick Clifton  <nickc@redhat.com>

	* config/tc-arm.c (meabi_flags): Make its use conditional upon
	OBJ_ELF being defined.

2004-03-27  Alan Modra  <amodra@bigpond.net.au>

	* config/obj-aout.c (obj_aout_type): Remove #ifdef BFD_ASSEMBLER code.

2004-03-23  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (meabi_flags): New variable.
	(arm_parse_eabi): New function.
	(md_begin): Set flags for EABI v3.
	(arm_eabis): Add.
	(arm_long_opts): Add meabi.
	* doc/as.texinf <ARM>: Document -meabi.
	* doc/c-arm.texi: Ditto.

2004-03-22  Bob Wilson  <bob.wilson@acm.org>
